--- a/src/Panacea.Modules.DisplayMessages/Views/DisplayMessageSimpleNotification.xaml
+++ b/src/Panacea.Modules.DisplayMessages/Views/DisplayMessageSimpleNotification.xaml
@@ -9,7 +9,7 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
-    mi:Material.RelativeFontSizeRatio="1.0">
+    TextElement.FontSize="{DynamicResource FontSize-Normal}">
     <Grid>
         <Button
             Padding="10,0"
@@ -68,7 +68,7 @@
                     Foreground="White"
                     TextWrapping="Wrap" 
                     Text="{Binding Time}"
-                    mi:Material.RelativeFontSizeRatio="0.9"/>
+                    FontSize="{DynamicResource FontSize-Small}"/>
             </Grid>
         </Button>
 
