--- a/src/Panacea.Modules.DisplayMessages/Views/RtfViewer.xaml
+++ b/src/Panacea.Modules.DisplayMessages/Views/RtfViewer.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Panacea.Modules.DisplayMessages.Views"
+    xmlns:local="clr-namespace:Panacea.Modules.DisplayMessages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -12,8 +12,8 @@
         <RichTextBox
             Name="RichTextBox1"
             Margin="0"
-            x:FieldModifier="public"
             BorderThickness="0"
-            IsReadOnly="true" />
+            IsReadOnly="True"
+            local:RichTextBoxHelper.DocumentRtf="{Binding Document}"/>
     </Grid>
 </UserControl>
